--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -5,10 +5,8 @@
 <head>
 	<meta charset='utf-8'>
 	<title>{{template "title" .}} - Snippetbox</title>
-	<!-- Link to the CSS stylesheet and favicon -->
 	<link rel='stylesheet' href='/static/css/main.css'>
 	<link rel='shortcut icon' href='/static/img/favicon.ico' type='image/x-icon'>
-	<!-- Also link to some fonts hosted by Google -->
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700'>
 </head>
 
@@ -16,10 +14,16 @@
 	<header>
 		<h1><a href='/'>Snippetbox</a></h1>
 	</header>
-	{{template "nav" .}} <main>
-		{{template "main" .}} </main>
-	<footer>Powered by <a href='https://golang.org/'>Go</a></footer> <!-- And include the JavaScript file -->
+	{{template "nav" .}}
+	<main>
+		{{template "main" .}}
+	</main>
+	<footer>
+		<!-- Update the footer to include the current year -->
+		Powered by <a href='https://golang.org/'>Go</a> in {{.CurrentYear}}
+	</footer>
 	<script src="/static/js/main.js" type="text/javascript"></script>
 </body>
 
-</html> {{end}}
+</html>
+{{end}}
