--- a/ui/html/pages/home.tmpl
+++ b/ui/html/pages/home.tmpl
@@ -1,6 +1,5 @@
 {{define "title"}}Home{{end}}
 {{define "main"}}
-
 <h2>Latest Snippets</h2>
 {{if .Snippets}}
 <table>
@@ -11,7 +10,8 @@
 	</tr>
 	{{range .Snippets}}
 	<tr>
-		<td><a href='/snippet/view?id={{.ID}}'>{{.Title}}</a></td>
+		<!-- Use the new clean URL style-->
+		<td><a href='/snippet/view/{{.ID}}'>{{.Title}}</a></td>
 		<td>{{humanDate .Created}}</td>
 		<td>#{{.ID}}</td>
 	</tr>
