--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -16,10 +16,13 @@
 	</header>
 	{{template "nav" .}}
 	<main>
+		<!-- Display the flash message if one exists -->
+		{{with .Flash}}
+		<div class='flash'>{{.}}</div>
+		{{end}}
 		{{template "main" .}}
 	</main>
 	<footer>
-		<!-- Update the footer to include the current year -->
 		Powered by <a href='https://golang.org/'>Go</a> in {{.CurrentYear}}
 	</footer>
 	<script src="/static/js/main.js" type="text/javascript"></script>
