--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -2,14 +2,21 @@
 <nav>
 	<div>
 		<a href='/'>Home</a>
+		<!-- Toggle the link based on authentication status -->
+		{{if .IsAuthenticated}}
 		<a href='/snippet/create'>Create snippet</a>
+		{{end}}
 	</div>
 	<div>
-		<a href='/user/signup'>Signup</a>
-		<a href='/user/login'>Login</a>
+		<!-- Toggle the links based on authentication status -->
+		{{if .IsAuthenticated}}
 		<form action='/user/logout' method='POST'>
 			<button>Logout</button>
 		</form>
+		{{else}}
+		<a href='/user/signup'>Signup</a>
+		<a href='/user/login'>Login</a>
+		{{end}}
 	</div>
 </nav>
 {{end}}
